--- a/dist.ini
+++ b/dist.ini
@@ -8,4 +8,5 @@ copyright_year   = 2012
 [@CJFIELDS]
 dist            = Bio-readfq
 repository_at   = github
-;skip_build      = 1
+use_module_build = 0
+skip_build = 1
