--- a/dist.ini
+++ b/dist.ini
@@ -9,4 +9,5 @@ copyright_year   = 2012
 dist            = Bio-Readfq
 repository_at   = github
 use_module_build = 0
-skip_build = 1
+skip_build      = 1
+create_readme   = 0
