remove cruft, change names

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = Bio-Readfq
+name    = Bio-Kseq
 author  = Chris Fields <cjfields@bioperl.org>
 license = Perl_5
 version = 0.01
@@ -6,7 +6,7 @@ copyright_holder = Chris Fields
 copyright_year   = 2012
 
 [@CJFIELDS]
-dist            = Bio-Readfq
+dist            = Bio-Kseq
 repository_at   = github
 use_module_build = 0
 skip_build      = 1
